forgot page api added, verify otp page api added, change password page api added, in booking page  Assign Role To Order api added, admin profile page api added

--- a/src/App.css
+++ b/src/App.css
@@ -663,3 +663,18 @@ font-weight: 700;
 .assign-button:hover {
   background-color: #019a7a;
 }
+
+.active-status{
+  color: #FFFFFF;
+  background-color: #00B69B;
+  border-radius: 9px;
+  padding: 5px 10px;
+  border: "none",
+}
+.inactive-status{
+  color: #FFFFFF;
+  background-color: #FCBE2D;
+  border-radius: 9px;
+  padding: 5px 10px;
+  border: "none",
+}
