--- a/src/App.css
+++ b/src/App.css
@@ -678,3 +678,17 @@ font-weight: 700;
   padding: 5px 10px;
   border: "none",
 }
+.active-button{
+  padding: 5px 12px;
+  border-radius: 5px;
+  background-color: rgb(82, 82, 241);
+  color: #FFFFFF;
+  border: none;
+}
+.nonActive-button{
+  padding: 5px 12px;
+  border-radius: 5px;
+  background-color: transparent;
+  color: blue;
+  border: 1px solid rgb(82, 82, 241);
+}
